toolchain/internal/core/analysis/testdata/errors/naming/const_not_upper_snake.vdl
// fmt:off
// @expect: E103

const maxUsers = 100
